# starccato_sampler

./: .gitignore  CHANGELOG.rst  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
src/starccato_sampler/: core.py  plotting.py  post_proc.py  pp_test.py  sampler.py  utils.py
src/starccato_sampler/core/: __init__.py  bayesian_functions.py  mcmc.py  ns.py
src/starccato_sampler/evidence/: __init__.py  gaussian_approximation_evidence.py  gss_evidence.py  harmonic_mean_evidence.py  stepping_stone_evidence.py
src/starccato_sampler/plotting/: __init__.py  plot_1d_marginals.py  plot_ci.py  plot_pe_comparison.py  plot_sampler_diagnostics.py
studies/: bilby_exploration.py  data_generator.py  dynesty_sampler.py  hacking.py  jaxns_testing.py  nested_sampler.py  numpyro_ns.py  numpyro_sampler.py
studies/output/: lnz_results.txt  plot_lnzs.py
tests/: conftest.py  sample_lartillot.py  test_evidence.py  test_pp_test.py  test_sampler.py  test_utils.py
